Fixed issue where font overlapped card

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,6 @@
     /* border: 2px, solid, blue; */
     font-family: 'Orbitron', sans-serif;
     text-align: center;
-    font-size: 40px;
 
 }
 
@@ -50,4 +49,9 @@ img {
 #textbox-input {
   font-family: 'Orbitron', sans-serif;
   /* font-weight: bold; */
+}
+
+#card-text {
+
+  font-size: 50%;
 }
